[package]
authors = ["Gabriel Zuser <zusergabriel@gmail.com>"]
name = "bme680-driver"
edition = "2024"
version = "0.1.0"

[[example]]
name = "stm32l031k6"
path = "examples/stm32l031k6.rs"
test = false

[lib]
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
semihosting = "0.1.20"

[dev-dependencies]
defmt-test = "0.3"
stm32l0xx-hal = { version = "0.10.0", features = ["mcu-STM32L071KBTx", "rt"] }

[profile.dev]
opt-level = 's'
codegen-units = 1

[profile.release]
opt-level = 's'
codegen-units = 1
lto = 'fat'
debug = 2
