[package]
name = "bme680-driver"
version = "0.2.0"
authors = ["Gabriel Zuser <zusergabriel@gmail.com>"]
edition = "2024"
description = "A type-safe, no_std driver for the Bosch BME680 environmental sensor using embedded-hal"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Wkesther2/bme680-driver.git"
keywords = ["sensor", "bme680", "embedded-hal", "environmental", "air-quality"]
categories = ["embedded", "no-std", "hardware-support"]
include = ["src/**/*", "examples/**/*", "Cargo.toml", "README.md", "LICENSE-*"]

[[example]]
name = "stm32f407"
path = "examples/stm32f407.rs"
test = false

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
panic-probe = { version = "1.0", features = ["print-defmt"] }
defmt = "1.0"
defmt-rtt = "1.0"
rtt-target = "0.6.2"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
[dependencies.stm32f4xx-hal]
version = "0.23.0"
features = ["stm32f407"]

[profile.dev]
opt-level = 1
overflow-checks = true
debug = true
codegen-units = 1

[profile.release]
opt-level = 's'
codegen-units = 1
lto = 'fat'
debug = 2
overflow-checks = false
